[package]
name = "art-of-rally-leaderboard-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
comfy-table = { version = "7.1.4", default-features = false }
curl = "0.4.47"
indicatif = "0.17.11"
itertools = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
snafu = "0.8.5"

[dependencies.art-of-rally-leaderboard-api]
git = "https://github.com/sornas/art-of-rally-leaderboard-api"
rev = "9e176398fcb56bedeb33671cb8e9aa1af55546e2"
version = "0.1.0"
features = ["enum-iter"]
