[package]
name = "art-of-rally-leaderboard-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
comfy-table = { version = "7.1.4", default-features = false }
curl = "0.4.47"
indicatif = "0.17.11"
itertools = "0.14.0"
maud = "0.27.0"
md5 = "0.8.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
snafu = "0.8.5"

[dependencies.art-of-rally-leaderboard-api]
git = "https://github.com/sornas/art-of-rally-leaderboard-api"
rev = "8cf8cd77ce5ff9c00b74003a055234dd8619eb33"
version = "0.1.0"
features = ["enum-iter"]
