[package]
name = "art-of-rally-leaderboard-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
indicatif = "0.17.11"
itertools = "0.14.0"
maud = "0.27.0"
md5 = "0.8.0"
rayon = "1.10.0"
ron = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
snafu = "0.8.5"
ureq = { version = "3.1.0", features = ["json"] }

[dependencies.art-of-rally-leaderboard-api]
git = "https://github.com/sornas/art-of-rally-leaderboard-api"
rev = "550d2b9a0fcf2d581b2fb61c7878a592df8dd09e"
version = "0.1.0"
features = ["enum-iter"]
